--- a/VoidHeadWOTRNineSwords.csproj
+++ b/VoidHeadWOTRNineSwords.csproj
@@ -13,6 +13,8 @@
 
     <AssemblyName>VoidHeadWOTRNineSwords</AssemblyName>
     <RootNamespace>VoidHeadWOTRNineSwords</RootNamespace>
+    <AssemblyVersion>0.9.0.0</AssemblyVersion>
+    <FileVersion>0.9.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
