--- a/VoidHeadWOTRNineSwords.csproj
+++ b/VoidHeadWOTRNineSwords.csproj
@@ -45,7 +45,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="ILRepack.MSBuild.Task" Version="*" />
-    <PackageReference Include="WW-Blueprint-Core" Version="*" />
+    <PackageReference Include="WW-Blueprint-Core" Version="2.8.6" />
   </ItemGroup>
 
   <ItemGroup>
