--- a/VoidHeadWOTRNineSwords.csproj
+++ b/VoidHeadWOTRNineSwords.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <!--
@@ -13,8 +13,8 @@
 
     <AssemblyName>VoidHeadWOTRNineSwords</AssemblyName>
     <RootNamespace>VoidHeadWOTRNineSwords</RootNamespace>
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
+    <FileVersion>1.4.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
